 @startuml
skinparam classAttributeIconSize 0

class ApplicationPOT
{
  +static getInstance()
  +getCurrentSession()
}

class UserSession
{
  +getUserEmail()
}

class Task {
  -String reference
  -String designation
  -String informalDescription
  -String technicalDescription
  -Integer duration
  -Double cost
  +Task(ref,designation,informalDesc,technicalDesc,duration,cost,cat)
}

class Category {
  -String id
  -String description
}

class Organization {
  -String name
  -String VatNumber
  -String website
  -String phone
  -String email
  +Organization(name, VatNumber, webSite, phone, email, postalAddress, manager)
  +createTask(ref,designation,informalDesc,technicalDesc,duration,cost,cat)
  +saveTask(task)
  -addTask(task)
  -validateTask(task)
}

class Platform {
  -String designation
  +getCategories()
  +getCategoryById(catId)
  +getOrganizationByUserEmail(email)
}

class CreateTaskController {
  +getCategories()
  +createTask(ref,designation,informalDesc,technicalDesc,duration,cost,categoryId)
  +saveTask()
}

class CreateTaskUI {

}

CreateTaskUI ..> CreateTaskController
CreateTaskController ..> Platform
CreateTaskController ..> Category
CreateTaskController ..> Task
CreateTaskController ..> Organization
CreateTaskController ..> ApplicationPOT
CreateTaskController ..> UserSession
Task "*" -> "1" Category : classified in
Platform "1" --> "*" Category : defines
Organization "1" --> "*" Task : owns


@enduml